Base template with blocks and Register

--- a/auctions/templates/base.html
+++ b/auctions/templates/base.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
-	<head>
+	<head lang="en">
+		<meta charset="utf-8">
 		<title>{% block title %} Template {% endblock %}</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
 	</head>
