--- a/auctions/templates/base.html
+++ b/auctions/templates/base.html
@@ -3,7 +3,8 @@
 	<head lang="en">
 		<meta charset="utf-8">
 		<title>{% block title %} Template {% endblock %}</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+		{% load staticfiles %}
+		<link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}" media="screen" />
 	</head>
 	<body>
 		<div id="header">
