--- a/auctions/templates/register.html
+++ b/auctions/templates/register.html
@@ -15,6 +15,6 @@
         <input type="text" name="{{ field.name }}" id="id_{{ field.name }}" placeholder="{% if not field.value %}{{ field.label|capfirst }}{% endif %}" value="{% if field.value %}{{ field.value }}{% endif %}" class="form-control font_source_semibold contract_field_width">
       </div>
       {% endfor %}
-      <input type="submit" value="REGISTER">
+      <input type="submit" value="Register">
     </form>
   {% endblock %}  
