--- a/auctions/static/css/style.css
+++ b/auctions/static/css/style.css
@@ -106,8 +106,9 @@ body {
 
 
 #content {
-	margin-left: 340px;
-	margin-right: 20px;
+	padding-left: 340px;
+	margin-left: auto;
+	margin-right: auto;
 	min-width: 600px;
 	min-height: 540px;
 	background-color: #DBDBDB;
