--- a/auctions/templates/css/style.css
+++ b/auctions/templates/css/style.css
@@ -106,11 +106,11 @@ body {
 
 
 #content {
-	margin-left: 340px;
-	margin-right: 20px;
+	padding-left: 340px;
+	margin-left: auto;
+	margin-right: auto;
 	min-width: 600px;
 	min-height: 540px;
-	background-color: #DBDBDB;
 }
 
 #footer {
