--- a/auctions/templates/register.html
+++ b/auctions/templates/register.html
@@ -12,7 +12,7 @@
       {% csrf_token %}
       {% for field in form %}
       <div class="form-group contract_form {% if field.errors %}has-error{% endif %}">
-        <input type="{% if field.name='id_password1' %}password{% else %}text{% endif %}" name="{{ field.name }}" id="id_{{ field.name }}" placeholder="{% if not field.value %}{{ field.label|capfirst }}{% endif %}" value="{% if field.value %}{{ field.value }}{% endif %}" class="form-control font_source_semibold contract_field_width">
+        <input type="text" name="{{ field.name }}" id="id_{{ field.name }}" placeholder="{% if not field.value %}{{ field.label|capfirst }}{% endif %}" value="{% if field.value %}{{ field.value }}{% endif %}" class="form-control font_source_semibold contract_field_width">
       </div>
       {% endfor %}
       <input type="submit" value="Register">
