--- a/auctions/templates/base.html
+++ b/auctions/templates/base.html
@@ -4,7 +4,10 @@
 		<meta charset="utf-8">
 		<title>{% block title %} Template {% endblock %}</title>
 		{% load staticfiles %}
+			<script src="{% static "js/jquery-1.10.2.min.js" %}">
+			</script>
 		<link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}" media="screen" />
+
 	</head>
 	<body>
 		<div id="header">
