--- a/auctions/templates/edit_profile.html
+++ b/auctions/templates/edit_profile.html
@@ -13,13 +13,14 @@
       {% for field in form %}
 
       <div class="form-group contract_form {% if field.errors %}has-error{% endif %}">
-        {% if field.name == "password" or field.name == "confirm_password"%}
+        
+        {% if field.name == "password" or field.name == "confirm_password" %}
 
-          <input type="password" id="id_{{ field.name }}" placeholder="{% if not field.value %}{{ field.label|capfirst }}{% endif %}" value="{% if field.value %}{{ field.value }}{% endif %}" class="form-control font_source_semibold contract_field_width">
+          <input type="password" id="id_{{ field.name }}" name="{{ field.name }}" placeholder="{% if not field.value %}{{ field.label|capfirst }}{% endif %}" value="{% if field.value %}{{ field.value }}{% endif %}" class="form-control font_source_semibold contract_field_width">
 
         {% else %}
 
-          <input type="text" id="id_{{ field.name }}" placeholder="{% if not field.value %}{{ field.label|capfirst }}{% endif %}" value="{% if field.value %}{{ field.value }}{% endif %}" class="form-control font_source_semibold contract_field_width">
+          <input type="text" id="{{ field.name }}" name="{{ field.name }}" placeholder="{% if not field.value %}{{ field.label|capfirst }}{% endif %}" value="{% if field.value %}{{ field.value }}{% endif %}" class="form-control font_source_semibold contract_field_width">
 
         {% endif %}
 
