Put the form inside the html instead of the previous hardcoded version

--- a/auctions/templates/create_auction.html
+++ b/auctions/templates/create_auction.html
@@ -145,27 +145,7 @@
 	</fieldset>
 	<fieldset id="auction_info" style="display:none">
 		<legend>Auction Information</legend>
-		<table>
-			<tr>
-				<td>Type:
-				</td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>End Date:
-				</td>
-				<td>
-					<input class="editable" name="auct_end_date" type="text" placeholder="End Date"/>
-				</td>
-			</tr>
-			<tr>
-				<td>Starting Price:
-				</td>
-				<td>
-					<input class="editable" name="auct_start_price" type="text" placeholder="Starting Price"/>
-				</td>
-			</tr>
-		</table>
+		{{form.as_p}}
 		<a id="previous1" href="#">Previous</a> 
 		<a id="next2" href="#">Next</a>
 	</fieldset>
