Added the category page, which still needs attention from the front-end people. Also added the correct links to the base.html

--- a/auctions/templates/base.html
+++ b/auctions/templates/base.html
@@ -43,19 +43,19 @@
 			<div id="side-bar">
 				<h1>Categories</h1>
 				<ul id="categories">
-					<li> <a href="#"> Audio & Stereo </a> </li> 
-					<li> <a href="#"> Baby & Kids Stuff </a> </li> 
-					<li> <a href="#"> CDs, DVDs, Games & Books </a> </li> 
-					<li> <a href="#"> Clothes, Footwear & Accessories </a> </li> 
-					<li> <a href="#"> Computers & Software </a> </li> 
-					<li> <a href="#"> Home & Garden </a> </li> 
-					<li> <a href="#"> Music & Instruments </a> </li> 
-					<li> <a href="#"> Office Furniture & Equipment </a> </li> 
-					<li> <a href="#"> Phones, Mobile Phones & Telecom </a> </li> 
-					<li> <a href="#"> Sports, Leisure & Travel </a> </li> 
-					<li> <a href="#"> TV, DVD & Cameras </a> </li> 
-					<li> <a href="#"> Video Games & Consoles </a> </li> 
-					<li> <a href="#"> Other </a> </li>
+					<li> <a href="/category/audio/"> Audio & Stereo </a> </li> 
+					<li> <a href="/category/baby/"> Baby & Kids Stuff </a> </li> 
+					<li> <a href="/category/media/"> CDs, DVDs, Games & Books </a> </li> 
+					<li> <a href="/category/fash/"> Clothes, Footwear & Accessories </a> </li> 
+					<li> <a href="/category/tech/"> Computers & Software </a> </li> 
+					<li> <a href="/category/home/"> Home & Garden </a> </li> 
+					<li> <a href="/category/music/"> Music & Instruments </a> </li> 
+					<li> <a href="/category/offic/"> Office Furniture & Equipment </a> </li> 
+					<li> <a href="/category/phone/"> Phones, Mobile Phones & Telecom </a> </li> 
+					<li> <a href="/category/sport/"> Sports, Leisure & Travel </a> </li> 
+					<li> <a href="/category/scrns/"> TV, DVD & Cameras </a> </li> 
+					<li> <a href="/category/games/"> Video Games & Consoles </a> </li> 
+					<li> <a href="/category/na/"> Other </a> </li>
 				</ul>
 			</div>
 			<div id="content"> {% block content %} {% endblock %} </div>
