--- a/auctions/templates/base.html
+++ b/auctions/templates/base.html
@@ -28,14 +28,15 @@
 					</td>
 					<td id="user" style="color:#ffffff">
 						{% if user.is_authenticated %}
-						<p>Logged in as {{user.username}}<br />
-						<a href="/logout/" alt="Log out">Log out</a></p>
+						<p style="font-size: 10px">Logged in as {{user.username}}<br />
+						<a href="/logout/" alt="Log out"><button id="logout_button" style="font-size: 10px">Log Out</button></a></p>
 						{% else %}
 						<form id="login_form" method="post" action="/login/">
 							{% csrf_token %}
 							<input type="text" name="username" value="" placeholder="Username" style="font-size: 10px"><br />
   							<input type="password" name="password" value="" placeholder="Password" style="font-size: 10px"><br />
-  							<input type="submit" name="submit" value="Log in" style="font-size: 10px"><br />
+  							<input type="submit" name="submit" value="Log in" style="font-size: 10px">
+  							<a href="/register/" style="color:#ffffff">Register</a><br />
   						</form>
   						{% endif %}
 					</td>
