--- a/auctions/templates/profile.html
+++ b/auctions/templates/profile.html
@@ -22,8 +22,12 @@
       <tr><td><b>Auction type:</b></td><td>{{auction.get_type_name}}</td></tr>
       <tr><td><b>Start price:</b></td><td>&pound;{{auction.start_price}}</td></tr>
       {% if auction.finished %}
-        <tr><td><b>Sold to:</b></td><td>{{ auction.winner.username }}</td></tr>
-        <tr><td><b>Sold for:</b></td><td>&pound;{{ auction.winning_value }}</td></tr>
+        {% if auction.winning_value %}
+          <tr><td><b>Sold to:</b></td><td>{{ auction.winner.username }}</td></tr>
+          <tr><td><b>Sold for:</b></td><td>&pound;{{ auction.winning_value }}</td></tr>
+        {% else %}
+          <tr><td><b>Not Sold :(</td></tr>
+        {% endif %}
       {% endif %}
     </table>
   {% endfor %}
