--- a/auctions/templates/profile.html
+++ b/auctions/templates/profile.html
@@ -30,6 +30,7 @@
         {% endif %}
       {% endif %}
     </table>
+  </td></tr><tr><td><!-- This is just to jump a line !-->
   {% endfor %}
 </td></tr></table>
 {% endif %}
@@ -50,6 +51,7 @@
       <tr><td><b>Sold by:</b></td><td>{{auction.auctioneer}}</td></tr>
       <tr><td><b>Sold for:</b></td><td>&pound;{{ auction.winning_value }}</td></tr>
     </table>
+  </td></tr><tr><td><!-- This is just to jump a line !-->
   {% endfor %}
 </td></tr></table>
 {% endif %}
