Added favicon in base.html

--- a/auctions/templates/base.html
+++ b/auctions/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head lang="en">
+		<link rel="shortcut icon" href="http://www.iconj.com/ico/p/3/p3sqc11sxs.ico" type="image/x-icon" />
 		<meta charset="utf-8">
 		<title>{% block title %} Template {% endblock %}</title>
 
