--- a/auctions/templates/base.html
+++ b/auctions/templates/base.html
@@ -15,7 +15,7 @@
 		<div id="header">
 			<table border="0" id="header-table" class="center">
 				<tr height="60">
-					<td id="logo"><center><img src="{% static "css/logo.png" %}" style="margin-top:-10px;" /></center></td>
+					<td id="logo"><center><a href="/home/"> <img src="{% static "css/logo.png" %}" style="margin-top:-10px;" /></a></center></td>
 					<td id="search">
 						<form>
 							<table style="width: 100%;">
