--- a/auctions/templates/index.html
+++ b/auctions/templates/index.html
@@ -17,8 +17,9 @@
   </tr></table>
 
     <div class="out enterleave">
-        <a href="#"><img src="#" width="150" height="150" border="0"/></a>
-        <div style="height: 65px;"> <p> <a href="#">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</a> </p> </div>
+        <div style="height: 250px;">
+            <a href="#"><img src="#" width="150" height="150" border="0"/></a>
+            <p> <a href="#">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</a> </p> </div>
         <div class="hidden">
             <table>
                 <tr><td>Price: $898989</td></tr>
